unpackaged/main/default/objects/Campaign_Spend__c/Campaign_Spend__c.object-meta.xml
<CustomObject>
    <description>Forecast, Actual, and Committed records for all Campaigns.</description>
    <label>Campaign Spend</label>
    <nameField>
        <displayFormat>CS-{0000000000}</displayFormat>
        <label>Campaign Spend ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Spend</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>