unpackaged/main/default/objects/Campaign_Spend__c/fields/Aug_Budget__c.field-meta.xml
<CustomField>
    <fullName>Aug_Budget__c</fullName>
    <description>August Budget</description>
    <label>Aug Plan</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>