unpackaged/main/default/objects/Campaign_Spend__c/fields/Budget_Month__c.field-meta.xml
<CustomField>
    <fullName>Budget_Month__c</fullName>
    <label>Budget Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jan</fullName>
                <default>true</default>
                <label>Jan</label>
            </value>
            <value>
                <fullName>Feb</fullName>
            </value>
            <value>
                <fullName>Mar</fullName>
            </value>
            <value>
                <fullName>Apr</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>Jun</fullName>
            </value>
            <value>
                <fullName>Jul</fullName>
            </value>
            <value>
                <fullName>Aug</fullName>
            </value>
            <value>
                <fullName>Sep</fullName>
            </value>
            <value>
                <fullName>Oct</fullName>
            </value>
            <value>
                <fullName>Nov</fullName>
            </value>
            <value>
                <fullName>Dec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>