unpackaged/main/default/objects/Campaign_Spend__c/fields/Committed_Type__c.field-meta.xml
<CustomField>
    <fullName>Committed_Type__c</fullName>
    <description>PREQ = Purchase Requisition. PORD = Purchase Order.</description>
    <inlineHelpText>PREQ = Purchase Requisition. PORD = Purchase Order.</inlineHelpText>
    <label>Committed Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>