unpackaged/main/default/objects/Campaign_Spend__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <label>Company Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>