unpackaged/main/default/objects/Campaign_Spend__c/fields/ConsolidatedPeriod__c.field-meta.xml
<CustomField>
    <fullName>ConsolidatedPeriod__c</fullName>
    <description>This field gives the month name for different record types.</description>
    <formula>IF( RecordType.DeveloperName = 'Actual_AUS' &amp;&amp;  NOT(ISBLANK(Posting_Date__c)) , CASE( MONTH( Posting_Date__c ) ,1, "Jan",2, "Feb",3, "Mar",4, "Apr",5, "May",6, "Jun",7, "Jul",8, "Aug",9, "Sep",10, "Oct",11, "Nov",12, "Dec","") &amp; "-" &amp;  Campaign_Year__c , 
IF( RecordType.DeveloperName = 'Committed_AUS' &amp;&amp; NOT(ISBLANK(Posting_Date__c)) , CASE( MONTH( Posting_Date__c ) ,1, "Jan",2, "Feb",3, "Mar",4, "Apr",5, "May",6, "Jun",7, "Jul",8, "Aug",9, "Sep",10, "Oct",11, "Nov",12, "Dec","") &amp; "-" &amp;  Campaign_Year__c , 
IF(RecordType.DeveloperName = 'Forecast' &amp;&amp; NOT(ISNULL(TEXT(Forecast_Month__c))),  TEXT(Forecast_Month__c)&amp; "-" &amp;  Campaign_Year__c, 
IF(RecordType.DeveloperName = 'Monthly_Budget_AUS' &amp;&amp; NOT(ISNULL(TEXT(Budget_Month__c))),  TEXT( Budget_Month__c ) &amp; "-" &amp;  Campaign_Year__c, 
IF(RecordType.DeveloperName = 'Monthly_Plan_AUS' &amp;&amp; NOT(ISNULL(TEXT(Planning_Month__c))),  TEXT( Planning_Month__c) &amp; "-" &amp;  Campaign_Year__c, '')))))</formula>
    <inlineHelpText>This field gives the month name for different record types.</inlineHelpText>
    <label>Consolidated Period</label>
    <type>Text</type>
</CustomField>