unpackaged/main/default/objects/Campaign_Spend__c/fields/Dec_Budget__c.field-meta.xml
<CustomField>
    <fullName>Dec_Budget__c</fullName>
    <label>Dec Plan</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>