unpackaged/main/default/objects/Campaign_Spend__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    <description>Represents a PR Number, or PO Number, etc. from SAP.</description>
    <label>Document Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>