unpackaged/main/default/objects/Campaign_Spend__c/fields/Forecast_Month__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Month__c</fullName>
    <description>Represents the Month that the forecast amount is applicable for.</description>
    <label>Forecast Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jan</fullName>
            </value>
            <value>
                <fullName>Feb</fullName>
            </value>
            <value>
                <fullName>Mar</fullName>
            </value>
            <value>
                <fullName>Apr</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>Jun</fullName>
            </value>
            <value>
                <fullName>Jul</fullName>
            </value>
            <value>
                <fullName>Aug</fullName>
            </value>
            <value>
                <fullName>Sep</fullName>
            </value>
            <value>
                <fullName>Oct</fullName>
            </value>
            <value>
                <fullName>Nov</fullName>
            </value>
            <value>
                <fullName>Dec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>