unpackaged/main/default/objects/Campaign_Spend__c/fields/Forecast_Month_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Month_Date__c</fullName>
    <formula>DATE(VALUE( ParentCampaign__r.Year__c ),
CASE(Forecast_Month__c, 
'Jan',1,
'Feb',2,
'Mar',3,
'Apr',4,
'May',5,
'Jun',6,
'Jul',7,
'Aug',8,
'Sep',9,
'Oct',10,
'Nov',11,
'Dec',12,1)
,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Date</label>
    <type>Date</type>
</CustomField>