unpackaged/main/default/objects/Campaign_Spend__c/fields/GLAccount__c.field-meta.xml
<CustomField>
    <fullName>GLAccount__c</fullName>
    <description>Cost Element from SAP.</description>
    <label>GL Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>