unpackaged/main/default/objects/Campaign_Spend__c/fields/Jun_Budget__c.field-meta.xml
<CustomField>
    <fullName>Jun_Budget__c</fullName>
    <description>June Budget</description>
    <label>Jun Plan</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>