unpackaged/main/default/objects/Campaign_Spend__c/fields/Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Number__c</fullName>
    <description>The SAP Line Item number.</description>
    <label>Line Item Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>