unpackaged/main/default/objects/Campaign_Spend__c/fields/Line_Item_Text__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Text__c</fullName>
    <label>Line Item Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>