unpackaged/main/default/objects/Campaign_Spend__c/fields/Mar_Budget__c.field-meta.xml
<CustomField>
    <fullName>Mar_Budget__c</fullName>
    <description>March Budget</description>
    <inlineHelpText>Planned budget for March</inlineHelpText>
    <label>Mar Plan</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>