unpackaged/main/default/objects/Campaign_Spend__c/fields/Nov_Budget__c.field-meta.xml
<CustomField>
    <fullName>Nov_Budget__c</fullName>
    <label>Nov Plan</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>