unpackaged/main/default/objects/Campaign_Spend__c/fields/PR_Phasing__c.field-meta.xml
<CustomField>
    <fullName>PR_Phasing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To keep track of from which phasing record this spend is created</description>
    <label>PR Phasing</label>
    <referenceTo>PR_Phasing__c</referenceTo>
    <relationshipLabel>Campaign Spend</relationshipLabel>
    <relationshipName>Campaign_Spend</relationshipName>
    <type>Lookup</type>
</CustomField>