unpackaged/main/default/objects/Campaign_Spend__c/fields/PR_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>PR_Unique_Key__c</fullName>
    <externalId>true</externalId>
    <label>PR Unique Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>