unpackaged/main/default/objects/Campaign_Spend__c/fields/ReportingDate__c.field-meta.xml
<CustomField>
    <fullName>ReportingDate__c</fullName>
    <description>A common date field that is used to compare Actuals to Committed to Forecast in reports. Actuals mirror Posting Date, Committed mirrors Debit Date, and Forecast mirrors Forecast Month  Date.</description>
    <formula>IF(RecordType.Name = "Forecast" &amp;&amp; NOT(ISNULL(Forecast_Month_Date__c)), Forecast_Month_Date__c,
  IF(RecordType.Name = "Actual" &amp;&amp; NOT(ISNULL(Posting_Date__c)), Posting_Date__c,
    IF(RecordType.Name = "Committed" &amp;&amp; NOT(ISNULL(Debit_Date__c)), Debit_Date__c,      
      null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Date</label>
    <type>Date</type>
</CustomField>