unpackaged/main/default/objects/Campaign_Spend__c/fields/Spend_Type__c.field-meta.xml
<CustomField>
    <fullName>Spend_Type__c</fullName>
    <description>Spend Type for The Campaign Spend to be used in the Campaign Planning &amp; Forecast section</description>
    <label>Spend Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>GWP</fullName>
            </value>
            <value>
                <fullName>Customer Program</fullName>
            </value>
            <value>
                <fullName>CTW</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Freight/Delivery/Kitting/Handling</fullName>
            </value>
            <value>
                <fullName>WIS</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Brand Engagement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Visibility (Semi/Permanent)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>