unpackaged/main/default/objects/Campaign_Spend__c/fields/Total_Planning_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Planning_Amount__c</fullName>
    <description>Sum of all campaign planning amounts i.e. Jan to Dec</description>
    <label>Total Planning Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>