unpackaged/main/default/objects/Campaign_Spend__c/recordTypes/Actual.recordType-meta.xml
<RecordType>
    <fullName>Actual</fullName>
    <active>true</active>
    <description>Actual Spend from SAP.</description>
    <label>Actual</label>
</RecordType>