unpackaged/main/default/objects/Campaign_Spend__c/recordTypes/Actual_AUS.recordType-meta.xml
<RecordType>
    <fullName>Actual_AUS</fullName>
    <active>true</active>
    <description>Actual Australia</description>
    <label>Actual_AUS</label>
</RecordType>