unpackaged/main/default/objects/Campaign_Spend__c/recordTypes/Campaign_Planning_Forecasting.recordType-meta.xml
<RecordType>
    <fullName>Campaign_Planning_Forecasting</fullName>
    <active>true</active>
    <description>This record type shall be used for the Campaign Planning &amp; Forecast for Australia</description>
    <label>Campaign Planning &amp; Forecasting</label>
</RecordType>