unpackaged/main/default/objects/Campaign_Spend__c/recordTypes/Monthly_Budget_AUS.recordType-meta.xml
<RecordType>
    <fullName>Monthly_Budget_AUS</fullName>
    <active>true</active>
    <label>Monthly_Budget_AUS</label>
</RecordType>